cambio de nombre en columnas de cliente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-
+server.port=8081
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl = true
+spring.datasource.url=jdbc:mysql://localhost:3306/db_facturas
+spring.datasource.username=root
+spring.datasource.password=Kingjinx18
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#init data after every restart
+spring.jpa.hibernate.ddl-auto=update
+# Hibernate Logging
+logging.level.org.hibernate.SQL= DEBUG
+spring.main.allow-circular-references: true
