--- a/src/main/resources/application-desa-mysql.properties
+++ b/src/main/resources/application-desa-mysql.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/db_facturas
 spring.datasource.username=root
 spring.datasource.password=Kingjinx18
+
+logging.level.com.zytrust.facturas: DEBUG
